# FinalProject

./: alembic.ini  create_super_admin.py  docker-compose.yml  main.py  pyproject.toml  t1.py
alembic/: env.py
alembic/versions/: ff2ef7b00306_.py
src/: app.py  models.py  settings.py
src/alembic/: env.py
src/alembic/versions/: 077745294c8a_.py  46b32eea3b2a_.py  481a672904ab_.py  48b225ae5231_.py  4c321641164c_.py  53d2b5e67511_.py  5feee44fdf73_.py  8ede15bf9f15_.py  949a4ab8d42d_.py  ff2ef7b00306_.py
src/auth/: adimn.py  admin.py  app.py  dependencies.py  dockerfile  main.py  models.py  repository.py  requirements.txt  router.py  schemas.py  services.py  utils.py
src/database/: __init__.py  base.py  own_types.py
src/events/: app.py  dependencies.py  dockerfile  main.py  models.py  repository.py  router.py  schemas.py  services.py  utils.py
src/scripts/: create_super_admin.py
src/shared/: custom_middleware.py  dependencies.py  requirements.txt  services.py  settings.py
src/shared/database/: __init__.py  base.py  own_types.py
src/shared/models/: __init__.py  auth_models.py  events_models.py
tests/: auth_test.py  conftest.py
tests/auth/: test_repo.py  test_user_service.py
