[project]
name = "final_progect"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "HanRix1", email = "HanRix1@mail.ru"},
]
dependencies = ["fastapi>=0.115.11", "pydentic>=0.0.1.dev3", "pydantic-settings>=2.8.1", "sqlalchemy>=2.0.39", "uvicorn>=0.34.0", "alembic>=1.15.1", "python-decouple>=3.8", "pydantic[email]>=2.10.6", "asyncpg>=0.30.0", "psycopg2>=2.9.10", "asyncio>=3.4.3", "bcrypt>=4.3.0", "pytest>=8.3.5", "starlette-session>=0.4.3", "redis>=5.2.1", "cryptography>=44.0.2", "fastapi-mail>=1.4.2", "pytest-asyncio>=0.26.0", "httpx>=0.28.1", "sqladmin>=0.20.1", "websockets>=15.0.1", "reddis>=1.0.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pipreqs>=0.5.0",
    "ruff>=0.11.8",
]
